--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,6 @@ proptest = "1.9"
 [[bench]]
 name = "clustering"
 harness = false
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
